# nasus-nebula

./: .gitignore  AGENTS.md  AI_AUDIT_REPORT.md  ARCHITECTURE.md  ARCHITECTURE_BRIEF.md  AUDIT.md  AUDIT_INDEX.md  AUDIT_REPORT.md  AUDIT_REPORT_2.md  AUDIT_SUMMARY.txt  Agentic_Capabilities_Analysis.md  CLAUDE.md  COMPONENT_SPECS.md  LICENSE  NASUS_FEATURE_DOCS.md  NASUS_FULL_AUDIT.docx  NASUS_PRD.md  README.md  STYLE_GUIDE.md  actionable_extraction_report.md  build-sidecar.sh  claude_code_prompt_agentic.md  comparison_notes.md  ddg.html  eslint.config.js  index.html  nasus-refactor-prompt.md  nasus_enhancement_claude_prompt.md  nasus_improvement_guide.docx  nasus_sidecar.spec  orchids-fix-prompt.md  orchids-rounds-F-J.md  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts  vitest.config.mjs  vitest.config.ts
.orchids/: orchids.json
ai-integration-concept-nasus/: ExecutionAgent.ts  GatewaySettings.tsx  INTEGRATION_GUIDE.md  gateway.rs  gatewayService.ts  gatewayStore.ts  gatewayTypes.ts  index.ts  modelRegistry.ts
browser-extension/: README.md  background.js  manifest.json  popup.html  popup.js
docker/: Dockerfile.sandbox  env-probe.sh
docs/: nasus-shadcn-theme-spec.md
nasus-fixes-02/: tauri.ts
nasus-web-designer/: README.md  package.json  vite.config.ts
nasus_m01_research_analyst_v1/: nasus_research_analyst.py  nasus_research_analyst_prompt.md  nasus_research_analyst_refine.md  nasus_research_analyst_schema.py
nasus_m02_api_integrator_v1/: nasus_api_integrator.py  nasus_api_integrator_prompt.md  nasus_api_integrator_refine.md  nasus_api_integrator_schema.py
nasus_m03_web_browser_v1/: nasus_web_browser.py  nasus_web_browser_prompt.md  nasus_web_browser_refine.md  nasus_web_browser_schema.py
nasus_m04_data_analyst_v1/: nasus_data_analyst.py  nasus_data_analyst_prompt.md  nasus_data_analyst_refine.md  nasus_data_analyst_schema.py
nasus_m05_code_engineer_v1/: nasus_code_engineer.py  nasus_code_engineer_prompt.md  nasus_code_engineer_refine.md
nasus_stack/: nasus_api_integrator.py  (+22 more)
nasus_stack/nasus_sidecar/: __init__.py  __main__.py  app.py  llm_client.py  logger.py  pyproject.toml  requirements.txt  workspace_io.py
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/sidecar/: index.js  install.js  nasus-sidecar  nasus-sidecar-aarch64-apple-darwin  package.json
src-tauri/src/: docker.rs  error.rs  gateway.rs  lib.rs  main.rs  python_sidecar.rs
src-tauri/src/models/: classifier.rs  defaults.rs  fetch.rs  mod.rs  registry.rs  router.rs
src-tauri/src/search/: cache.rs  keys.rs  mod.rs  pipeline.rs  service.rs
src-tauri/src/search/providers/: brave.rs  ddg.rs  exa.rs  google.rs  mod.rs  searxng.rs  serper.rs  tavily.rs  wikipedia.rs
src-tauri/src/sidecar/: mod.rs
(+286 files in other folders)
