[package]
name = "nasus"
version = "0.1.0"
description = "Nasus — autonomous AI agent"
authors = ["Nasus"]
license = "MIT"
repository = "https://github.com/nasus-app/nasus"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "nasus_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.9.5", features = [] }
tauri-plugin-log = "2"
tauri-plugin-store = "2"
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
reqwest = { version = "0.12", features = ["json", "stream"] }
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"
bollard = "0.18"
uuid = { version = "1", features = ["v4"] }
dirs = "5"
chrono = { version = "0.4", features = ["serde"] }
walkdir = "2"
