[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nasus-sidecar"
version = "1.0.0"
description = "FastAPI HTTP sidecar for the Nasus AI stack"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.7.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
]

[tool.hatch.build.targets.wheel]
packages = ["nasus_sidecar"]
